# aec-bench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ssc03-hydraulic-world.yml
agents/: __init__.py  entrypoint_agent.py  pydantic_ai_agent.py  rlm_agent.py  script_anthropic.py  script_azure_openai.py  tool_loop_anthropic.py  tool_loop_azure_openai.py
docs/: AGENTS.md  ARCHITECTURE.md  CONTRACTS.md  INVARIANTS.md  PROJECT_STRUCTURE.md  adapters-guide.md  communication-guide.md  disagreement-analysis.md  evaluation-guide.md  evolution-guide.md  feedback-guide.md  formula-template-backlog-review.md  formula-template-seed-inventory.md  harness-guide.md  maritime-contributing.md  mechanical-built-environment-template-filter.md  mechanical-task-names.md  meta-harness-future-interactions.md  meta-harness-guide.md  meta-harness-port-map.md  prime-lab-guide.md  ssc03-hydraulic-world.md  ssc03-interactive-hydraulic-lifecycle.md  ssc03-long-horizon-pr10-pr17.learning.md  ssc03-long-horizon-pr18-pr21.learning.md  ssc03-model-selected-intervention.md  ssc03-public-calibration-freeze.md  ssc03-richer-interaction-roadmap.md  ssc03-sealed-holdout-boundary.md  ssc03-swmm-compatibility-matrix.yaml  swarm-guide.md  tasks-guide.md
docs/adr/: 0001-sandbox-hybrid-access-pattern.md  0002-grounding-check-observability-only.md
docs/users/: user-guide.md
scripts/: __init__.py  build_task_ecology_exp1.py  build_task_ecology_exp1_pressure.py  build_trace_viewer.py  compare_task_ecology_exp1.py  convert_pixel_art.py  debug_evolver.py  run_task_ecology_baseline.py
seeds/: seed_schema.json
src/aec_bench/: __init__.py  config.py  config_env.py  search.py
tests/: __init__.py  test_bootstrap.py  test_config_resolution.py  test_public_repo_surface.py  test_release_manifest.py  test_search.py  test_yaml_env.py
tests/adapters/: test_advisor.py  test_base_capabilities.py  test_config.py  test_constitutional.py  test_direct.py  test_direct_providers.py  test_factory.py  test_local_registry.py  test_local_registry_constitutional.py  test_pydantic_ai_advisor.py  test_pydantic_ai_runtime.py  test_tool_loop.py  test_tool_loop_advisor.py  test_tool_loop_trajectory.py  test_transcript.py
tests/agents/: __init__.py  test_compaction.py  test_entrypoint_agent.py  test_env.py  test_providers.py  test_results.py  test_rlm_iter_loop.py  test_rlm_script.py  test_scaffolding.py  test_scripts.py  test_tools.py
tests/cli/: __init__.py  test_dataset_create.py  test_evolve.py  test_import_local.py  test_init.py  test_library_command.py  test_library_wired.py  test_meta_harness.py  test_output.py  test_remediate_command.py  test_run.py  test_run_local.py  test_run_local_normalisation.py  test_structured_errors.py  test_task.py  test_task_world_templates.py
tests/communication/: test_behavioral_report.py  test_job_report.py  test_query.py  test_report_builder.py  test_standalone.py  test_trace_report.py
tests/contracts/: test_advisor.py  test_dataset.py  (+26 more)
(+3586 files in other folders)
